username displays in nav if logged in

--- a/trollpy/templates/home.jinja2
+++ b/trollpy/templates/home.jinja2
@@ -2,13 +2,10 @@
 {% block body %}
 
 <div class="row">
-  <div id="board" class="small-6 columns">
-  </div>
-<div id="board" class="small-6 columns">
-  <p>Current Game Stats:</p>
-  <p>Yea Baby</p>
+  <div id="board" class="large-12 columns">
   </div>
 </div>
+
 <input type="button" id="startPositionBtn" value="new game" />
 
 <script>
