--- a/trollpy/templates/home.jinja2
+++ b/trollpy/templates/home.jinja2
@@ -2,7 +2,7 @@
 {% block body %}
 
 <div class="row">
-  <div id="board" class="large-12 columns">
+  <div id="board" class="small-11 columns">
   </div>
 </div>
 
