register screen is only on the login screen

--- a/trollpy/templates/login.jinja2
+++ b/trollpy/templates/login.jinja2
@@ -15,4 +15,7 @@
         <input type="submit" value="Log In"/>
     </form>
 
+<p>Need to <a href="{{ request.route_url('registration') }}">register</a> an account?
+
+
 {% endblock %}
