front end tweaking

--- a/trollpy/static/css/chessboard.css
+++ b/trollpy/static/css/chessboard.css
@@ -36,14 +36,14 @@
 
 /* white square */
 .white-1e1d7 {
-  background-color: #f0d9b5;
-  color: #b58863;
+  background-color: #b5caf0;
+  color: #6378b5;
 }
 
 /* black square */
 .black-3c85d {
-  background-color: #b58863;
-  color: #f0d9b5;
+  background-color: #6378b5;
+  color: #b5caf0;
 }
 
 /* highlighted square */
