--- a/trollpy/templates/layout.jinja2
+++ b/trollpy/templates/layout.jinja2
@@ -5,6 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Chess{% endblock %} - TrollPy</title>
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/foundation.css">
     <link rel="stylesheet" href="/static/css/app.css">
     <link rel="stylesheet" href="/static/css/chessboard.css">
@@ -16,11 +17,11 @@
 <body>
 
     <div class="row">
-        <div class="medium-6 columns">
+        <div class="medium-6 columns card-section">
             {% block body %}{% endblock %}
         </div>
-        <nav class="medium-6 columns">
-            <h1>TrollPy-Chess</h1>
+        <nav class="medium-6 columns card-section">
+            <h1>TrollPy Chess</h1>
             <ul>
                 <li>
                     <a href="{{ request.route_url('home') }}">Play</a>
@@ -41,6 +42,9 @@
         </nav>
     </div>
 
+    <footer class="footer card-section">
+        &copy; <script>document.write(new Date().getFullYear())</script> TrollPy
+    </footer>
 
 
     <script src="/static/js/vendor/what-input.js"></script>
