typed.js implemented

--- a/trollpy/templates/home.jinja2
+++ b/trollpy/templates/home.jinja2
@@ -6,11 +6,25 @@
   </div>
 </div>
 
+<script>
+    $(function(){
+        $("#chatbox").typed({
+            strings: ["User smack goes here."],
+            typeSpeed: 0,
+            showCursor: false,
+        });
+    });
+</script>
+
 <div class="row">
-    <div class="small-12 columns card-section">
+    <div id="chatbox" class="small-12 columns card-section">
+    </div>
+    <div class="small-12 columns">
         {% if not request.authenticated_userid %}   
         Please <a href="{{ request.route_url('login') }}">log in</a>...
         {% else %}
+        <input type="button" class="button hollow" id="talkSmackBtn" value="Talk Sh*t" />
+        
         <input type="button" class="button hollow" id="startPositionBtn" value="Give Up" />
         {% endif %}
     </div>
