--- a/trollpy/templates/layout.jinja2
+++ b/trollpy/templates/layout.jinja2
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="/static/css/foundation.css">
     <link rel="stylesheet" href="/static/css/app.css">
     <link rel="stylesheet" href="/static/css/chessboard.css">
+    <link rel="stylesheet" href="/static/css/typewriter.css">
     <script src="/static/js/chessboard.js"></script>
     <script src="/static/js/vendor/jquery.js"></script>
+    <script src="/static/js/vendor/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.2/chess.js"></script>
 </head>
 
