user model updated to include trollspeak property, template includes reference

--- a/trollpy/templates/home.jinja2
+++ b/trollpy/templates/home.jinja2
@@ -9,7 +9,7 @@
 <script>
     $(function(){
         $("#chatbox").typed({
-            strings: ["User smack goes here."],
+            strings: ["{{ user.trollspeak }}"],
             typeSpeed: 0,
             showCursor: false,
         });
