ability to delete entries in the smack_talk db

--- a/trollpy/templates/add_smack.jinja2
+++ b/trollpy/templates/add_smack.jinja2
@@ -11,4 +11,12 @@
         </p>
         <input type="submit" value="submit"/>
     </form>
+    <ul>
+    {% for killscore in killscore %}
+        <li>{{ killscore.statement }}
+            (Level: {{ killscore.killscore_id }})
+            <a href="/delete/{{ killscore.id }}">Delete</a>
+        </li>
+    {% endfor %}
+    </ul>
 {% endblock %}
