--- a/trollpy/templates/registration.jinja2
+++ b/trollpy/templates/registration.jinja2
@@ -23,6 +23,9 @@
         <label for="email">Email: </label>
         <input type="email" name="email" required/>
     </p>
+    <p>
+        <input type="hidden" name="admin" value="False"/>
+    </p>
     <input type="submit" value="Submit"/>
 
 </form>
