--- a/trollpy/templates/profile.jinja2
+++ b/trollpy/templates/profile.jinja2
@@ -5,6 +5,7 @@
     <li>Username: {{user.username}}</li>
     <li>Name: {{user.first_name}} {{user.last_name}}</li>
     <li>Email: <a href="mailto:{{user.email}}">{{user.email}}</a></li>
+    <li>Admin Status: {{ user.admin }}</li>
 </ul>
 
 {% endblock %}
