change alexa to trollpy

--- a/trollpy/templates/add_smack.jinja2
+++ b/trollpy/templates/add_smack.jinja2
@@ -4,7 +4,7 @@
     <form method="POST">
         <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}">
         <p>
-            <label for="statement">Alexa will say this: </label>
+            <label for="statement">Trollpy will say this: </label>
             <input type="text" name="statement"/>
         </p>
         <p>
