user profile updates and a admin user list exist

--- a/trollpy/templates/layout.jinja2
+++ b/trollpy/templates/layout.jinja2
@@ -44,6 +44,9 @@
                 <li>
                     <a href="{{ request.route_url('add_smack') }}">Edit Smack DB</a>
                 </li>
+                <li>
+                    <a href="{{ request.route_url('userlist') }}">User List</a>
+                </li>
                 {% endif %}
             </ul>
         </nav>
