ability to delete user from userlist admin view

--- a/trollpy/templates/userlist.jinja2
+++ b/trollpy/templates/userlist.jinja2
@@ -7,16 +7,14 @@
     </form>
     <table>
     <th>Username</th>
-    <th>Email</th>
-    <th>Admin?</th>
+    <th colspan="2">Admin?</th>
     {% for user in users %}
         {% if user.admin == True %}
         <tr>
         <td><b><a href="/profile/{{ user.username }}">
             {{ user.username }}
             </a></b></td>
-        <td><b>{{ user.email }}</b></td>
-        <td><b>{{ user.admin }}</b></td>
+        <td colspan="2"><b>{{ user.admin }}</b></td>
         </tr>
         {% endif %}
     {% endfor %}
@@ -24,13 +22,15 @@
         {% if user.admin == False %}
         <tr>
         <td><a href="/profile/{{ user.username }}">{{ user.username }}</a></td>
-        <td>{{ user.email }}</td>
         <td>{{ user.admin }}</td>
+        <td><a href="/delete_user/{{ user.id }}">Delete</a></td>
         </tr>
         {% endif %}
     {% endfor %}
     </table>
 
+{# <p>Register a <a href="{{ request.route_url('registration') }}">new account</a>.
+ #}
 {% else %}
 <p>You must be an admin to view this page.</p>
 {% endif %}
