--- a/trollpy/templates/add_smack.jinja2
+++ b/trollpy/templates/add_smack.jinja2
@@ -11,11 +11,11 @@
             <label for="killscore_id">Level of Severity: (-8 is the sickest of burns, 8 is meh) </label>
             <input type="number" name="killscore_id" min="-8" max="8">
         </p>
-        <input type="submit" value="submit"/>
+        <input type="submit" value="submit" class="button hollow" />
     </form>
     <ul>
     <table>
-    <th>Level</th><th>Phrase</th>
+    <th>Level</th><th colspan="2">Phrase</th>
     {% for killscore in killscore %}
     <tr>
         <td>{{ killscore.killscore_id }}</td>
