--- a/trollpy/templates/home.jinja2
+++ b/trollpy/templates/home.jinja2
@@ -135,7 +135,7 @@ function get_board(user) {
                 reloadChat('Game In Draw')
             } else {
                 reloadChat(trollspeak);
-                audio.src = "http://trollpy.herokuapp.com/mp3/" + stuff.id;
+                audio.src = "https://trollpy.herokuapp.com/mp3/" + stuff.id;
                 audio.play()
             }
         }
