smacktalk db is re-ordered by level

--- a/trollpy/templates/add_smack.jinja2
+++ b/trollpy/templates/add_smack.jinja2
@@ -15,14 +15,195 @@
     </form>
     <ul>
     <table>
+
     <th>Level</th><th colspan="2">Phrase</th>
+    {# --------------------------------------------------------------------- #}
     {% for killscore in killscore %}
+    {% if killscore.killscore_id == 8 %}
     <tr>
         <td>{{ killscore.killscore_id }}</td>
         <td>{{ killscore.statement }}</td>
         <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
     </tr>
+    {% endif %}
     {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == 7 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == 6 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == 5 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == 4 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == 3 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == 2 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == 1 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == 0 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == -1 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == -2 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == -3 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == -4 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == -5 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == -6 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == -7 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
+    {# --------------------------------------------------------------------- #}
+    {% for killscore in killscore %}
+    {% if killscore.killscore_id == -8 %}
+    <tr>
+        <td>{{ killscore.killscore_id }}</td>
+        <td>{{ killscore.statement }}</td>
+        <td><a href="/delete/{{ killscore.id }}">Delete</a></td>
+    </tr>
+    {% endif %}
+    {% endfor %}
+
     </table>
 {% else %}
 <p>You must be an admin to view this page.</p>
